force-app/main/default/objects/Opportunity/fields/Re_Sell_Flag__c.field-meta.xml
<CustomField>
    <fullName>Re_Sell_Flag__c</fullName>
    <formula>IF(Is_it_a_Resell__c &lt;&gt; false, &apos;RE-SOLD&apos;, &apos;SOLD&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Re-Sell Flag</label>
    <type>Text</type>
</CustomField>