force-app/main/default/objects/Opportunity/fields/Registration_Fee_Change_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Fee_Change_Request_Status__c</fullName>
    <label>Registration Fee Change Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>