force-app/main/default/objects/Opportunity/fields/Reporting_Date__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Date__c</fullName>
    <formula>IF(
    ISPICKVAL(StageName, &quot;Reserved&quot;),
    Unit_Reserved_Date_Only__c,
    IF(
        ISPICKVAL(StageName, &quot;Sold&quot;),
        Unit_Sold_Date_Only__c,
        NULL
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>