force-app/main/default/objects/Opportunity/fields/Resell_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Resell_To_Id__c</fullName>
    <label>Resell To Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>