force-app/main/default/objects/Opportunity/fields/Reserved_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Reserved_Date_Time__c</fullName>
    <label>Unit Reserved At</label>
    <type>DateTime</type>
</CustomField>