force-app/main/default/objects/Opportunity/fields/Reserved_To_Sold_days__c.field-meta.xml
<CustomField>
    <fullName>Reserved_To_Sold_days__c</fullName>
    <formula>DATEVALUE(Sold_Date_Time__c) - DATEVALUE(Reserved_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reserved To Sold days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>