force-app/main/default/objects/Opportunity/fields/Share_Deal__c.field-meta.xml
<CustomField>
    <fullName>Share_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when this Opportunity is an approved share deal between two RMs (50/50 credit).</description>
    <inlineHelpText>Checked when this deal is shared 50/50 between the Opportunity Owner and the Shared RM. Set via Share Deal approval.</inlineHelpText>
    <label>Share Deal</label>
    <type>Checkbox</type>
</CustomField>