force-app/main/default/objects/Opportunity/fields/Share_Deal_Status__c.field-meta.xml
<CustomField>
    <fullName>Share_Deal_Status__c</fullName>
    <description>Approval status for the Share Deal request on this Opportunity.</description>
    <label>Share Deal Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>