force-app/main/default/objects/Opportunity/fields/Shared_RM__c.field-meta.xml
<CustomField>
    <fullName>Shared_RM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second Relationship Manager on an approved share deal. Opportunity Owner remains the primary RM.</description>
    <inlineHelpText>The second RM sharing this deal 50/50. Must differ from the Opportunity Owner. Set via Share Deal approval.</inlineHelpText>
    <label>Shared RM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Sales Manager MIRA</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Shared Opportunities</relationshipLabel>
    <relationshipName>Shared_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>