force-app/main/default/objects/Opportunity/fields/Shared_RM_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shared_RM_Credit_Amount__c</fullName>
    <description>Attributed unit price for the Shared RM: 50% on share deals, 0 on single deals.</description>
    <formula>IF(Share_Deal__c, Unit_Price__c * 0.5, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared RM Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>