force-app/main/default/objects/Opportunity/fields/Shared_RM_Name__c.field-meta.xml
<CustomField>
    <fullName>Shared_RM_Name__c</fullName>
    <formula>Shared_RM__r.FirstName + &quot; &quot; + Shared_RM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shared RM Name</label>
    <type>Text</type>
</CustomField>