force-app/main/default/objects/Opportunity/fields/Sold_Date_for_Email__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date_for_Email__c</fullName>
    <formula>TEXT(DAY(DATEVALUE( Sold_Date_Time__c ))) &amp; &apos;-&apos; &amp;
TEXT(MONTH(DATEVALUE( Sold_Date_Time__c ))) &amp; &apos;-&apos; &amp;
TEXT(YEAR(DATEVALUE( Sold_Date_Time__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Date</label>
    <type>Text</type>
</CustomField>