force-app/main/default/objects/Opportunity/fields/Sold_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Sold_Date_Time__c</fullName>
    <label>Unit Sold At</label>
    <type>DateTime</type>
</CustomField>