force-app/main/default/objects/Opportunity/fields/Sold_Month__c.field-meta.xml
<CustomField>
    <fullName>Sold_Month__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Sold_Date_Time__c)),
  TEXT(YEAR(DATEVALUE(Sold_Date_Time__c))) &amp; &quot;-&quot; &amp; 
  TEXT(MONTH(DATEVALUE(Sold_Date_Time__c))),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sold Month</label>
    <type>Text</type>
</CustomField>