force-app/main/default/objects/Opportunity/fields/SPA_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Generated_Date__c</fullName>
    <label>SPA Generated Date</label>
    <type>Date</type>
</CustomField>