force-app/main/default/objects/Opportunity/fields/SPA_Signed__c.field-meta.xml
<CustomField>
    <fullName>SPA_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Signed</label>
    <type>Checkbox</type>
</CustomField>