force-app/main/default/objects/Opportunity/fields/SPA_Signed_By_Customer__c.field-meta.xml
<CustomField>
    <fullName>SPA_Signed_By_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Signed By Customer</label>
    <type>Checkbox</type>
</CustomField>