force-app/main/default/objects/Opportunity/fields/SPA_Signed_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Signed_Customer_Date__c</fullName>
    <label>SPA Signed By Customer Date</label>
    <type>Date</type>
</CustomField>