force-app/main/default/objects/Opportunity/fields/SPA_Signed_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>SPA_Signed_Notification_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPA Signed Notification Sent</label>
    <type>Checkbox</type>
</CustomField>