force-app/main/default/objects/Opportunity/fields/SPA_Signed_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Signed_Notification_Sent_Date__c</fullName>
    <label>SPA Signed Notification Sent Date</label>
    <type>Date</type>
</CustomField>