force-app/main/default/objects/Opportunity/fields/SPA_Status__c.field-meta.xml
<CustomField>
    <fullName>SPA_Status__c</fullName>
    <formula>IF(
    ISPICKVAL(StageName, &quot;Sold&quot;),
    &quot;SPA Fully Executed&quot;,
    IF(
        AND(
            NOT(ISPICKVAL(StageName, &quot;Sold&quot;)),
            SPA_Signed_By_Customer__c
        ),
        &quot;SPA Half Executed&quot;,
        IF(
            AND(
                NOT(ISPICKVAL(StageName, &quot;Sold&quot;)),
                NOT(SPA_Signed_By_Customer__c),
                NOT(ISBLANK(SPA_Generated_Date__c))
            ),
            &quot;SPA Issued&quot;,
            &quot;SPA Under Issue&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA Status</label>
    <type>Text</type>
</CustomField>