force-app/main/default/objects/Opportunity/fields/Target_Year__c.field-meta.xml
<CustomField>
    <fullName>Target_Year__c</fullName>
    <formula>IF( YEAR( Unit_Booked_Date_Only__c ) = 2025, &quot;2025&quot;, IF( YEAR( Unit_Booked_Date_Only__c ) = 2026, &quot;2026&quot;, TEXT(YEAR( Unit_Booked_Date_Only__c )) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Year</label>
    <type>Text</type>
</CustomField>