force-app/main/default/objects/Opportunity/fields/Transfer_Request_Approved__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Request_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer Request Approved</label>
    <type>Checkbox</type>
</CustomField>