force-app/main/default/objects/Opportunity/fields/Transfer_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Requested_Date__c</fullName>
    <label>Transfer Requested Date</label>
    <type>Date</type>
</CustomField>