force-app/main/default/objects/Opportunity/fields/Transferred_Date__c.field-meta.xml
<CustomField>
    <fullName>Transferred_Date__c</fullName>
    <label>Transferred Date</label>
    <type>Date</type>
</CustomField>