force-app/main/default/objects/Opportunity/fields/Unit_Booked_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Unit_Booked_Date_Only__c</fullName>
    <formula>DATEVALUE( Booking_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Booked Date Only</label>
    <type>Date</type>
</CustomField>