force-app/main/default/objects/Opportunity/fields/Unit_Price_CHF__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_CHF__c</fullName>
    <formula>Unit__r.Cost_CHF__c * CURRENCYRATE(&apos;CHF&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>