force-app/main/default/objects/Opportunity/fields/Unit_Price_Dashboard__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Dashboard__c</fullName>
    <formula>Unit__r.Cost_AED__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price Dashboard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>