force-app/main/default/objects/Opportunity/fields/Unit_Price_Report__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Report__c</fullName>
    <formula>&quot;AED &quot; &amp;
IF(Unit__r.Cost_AED__c &gt;= 1000000,
    TEXT(FLOOR(Unit__r.Cost_AED__c/1000000)) &amp; &quot;,&quot; &amp;
    RIGHT(&quot;000&quot; &amp; TEXT(FLOOR(MOD(Unit__r.Cost_AED__c/1000, 1000))), 3) &amp; &quot;,&quot; &amp;
    RIGHT(&quot;000&quot; &amp; TEXT(FLOOR(MOD(Unit__r.Cost_AED__c, 1000))), 3),
    IF(Unit__r.Cost_AED__c &gt;= 1000,
        TEXT(FLOOR(Unit__r.Cost_AED__c/1000)) &amp; &quot;,&quot; &amp;
        RIGHT(&quot;000&quot; &amp; TEXT(FLOOR(MOD(Unit__r.Cost_AED__c, 1000))), 3),
        TEXT(FLOOR(Unit__r.Cost_AED__c))
    )
) &amp;
&quot;.&quot; &amp;
IF(MOD(ROUND(Unit__r.Cost_AED__c, 2) * 100, 100) &lt; 10,
    &quot;0&quot; &amp; TEXT(MOD(ROUND(Unit__r.Cost_AED__c, 2) * 100, 100)),
    TEXT(MOD(ROUND(Unit__r.Cost_AED__c, 2) * 100, 100))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <type>Text</type>
</CustomField>