force-app/main/default/objects/Opportunity/fields/Unit_Registered_At__c.field-meta.xml
<CustomField>
    <fullName>Unit_Registered_At__c</fullName>
    <label>Unit Registered At</label>
    <type>Date</type>
</CustomField>