force-app/main/default/objects/Opportunity/fields/Unit_Reserved_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Unit_Reserved_Date_Only__c</fullName>
    <formula>DATEVALUE( Reserved_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Reserved Date Only</label>
    <type>Date</type>
</CustomField>