force-app/main/default/objects/Opportunity/fields/Unit_Sold_Date_Only__c.field-meta.xml
<CustomField>
    <fullName>Unit_Sold_Date_Only__c</fullName>
    <formula>DATEVALUE( Sold_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Sold Date Only</label>
    <type>Date</type>
</CustomField>