force-app/main/default/objects/Opportunity/fields/Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>Unit_Status__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Booking_Date_Time__c)), &quot;Booked&quot;,
  IF(NOT(ISBLANK(Sold_Date_Time__c)), &quot;Sold&quot;, &quot;None&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Status</label>
    <type>Text</type>
</CustomField>