force-app/main/default/objects/Opportunity/fields/Unit_Title__c.field-meta.xml
<CustomField>
    <fullName>Unit_Title__c</fullName>
    <formula>Unit__r.Title_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Title</label>
    <type>Text</type>
</CustomField>