force-app/main/default/objects/Opportunity/fields/Unit_Tower__c.field-meta.xml
<CustomField>
    <fullName>Unit_Tower__c</fullName>
    <formula>Unit__r.Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Tower</label>
    <type>Text</type>
</CustomField>