force-app/main/default/objects/Opportunity/fields/UTM__c.field-meta.xml
<CustomField>
    <fullName>UTM__c</fullName>
    <label>UTM</label>
    <type>TextArea</type>
</CustomField>