force-app/main/default/objects/Opportunity/validationRules/Block_Access_To_Change_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Access_To_Change_Account_Name</fullName>
    <active>true</active>
    <description>Restrict Account change access on Opportunity to System Admin only</description>
    <errorConditionFormula>AND(
!ISNEW(),
ISCHANGED(AccountId),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change Account on existing Opportunity. Please contact System Administrator.</errorMessage>
</ValidationRule>