force-app/main/default/objects/Opportunity/validationRules/Block_Access_To_Change_Owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_Access_To_Change_Owner</fullName>
    <active>true</active>
    <description>Block access to change opportunity owner</description>
    <errorConditionFormula>AND(
 !ISNEW(),
 ISCHANGED(OwnerId),
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>You cannot change Opportunity Owner. Please contact System Administrator.</errorMessage>
</ValidationRule>