force-app/main/default/objects/Opportunity/validationRules/Cannot_go_back_to_New_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_go_back_to_New_Stage</fullName>
    <active>true</active>
    <description>Cannot_go_back_to_New</description>
    <errorConditionFormula>ISCHANGED(StageName )
&amp;&amp;
Text(StageName)=&apos;New&apos;</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>You can not go back to previous stage. You may set Closed-Cancelled for this Opportunity and create a new one.</errorMessage>
</ValidationRule>