force-app/main/default/objects/Opportunity/validationRules/Prevent_Opportunity_From_Prior_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Opportunity_From_Prior_Stage</fullName>
    <active>false</active>
    <description>Prevent opportunity from going to any prior stage</description>
    <errorConditionFormula>AND(
ISCHANGED(StageName),
NOT(
ISPICKVAL(StageName, &quot;Cancelled&quot;) ||
ISPICKVAL(StageName, &quot;Transfered&quot;)
),
CASE(
PRIORVALUE(StageName),
&quot;Sold&quot;, 3,
&quot;Reserved&quot;, 2,
&quot;Booked&quot;, 1,
0
) &gt; CASE(
StageName,
&quot;Sold&quot;, 3,
&quot;Reserved&quot;, 2,
&quot;Booked&quot;, 1,
0
)
)</errorConditionFormula>
    <errorMessage>You cannot move to prior stage. Please contact your System Administrator</errorMessage>
</ValidationRule>