force-app/main/default/objects/Opportunity/validationRules/Restrict_Opportunity_Created_In_New_Stag.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Opportunity_Created_In_New_Stag</fullName>
    <active>true</active>
    <description>Restrict opportunity creation to New stage</description>
    <errorConditionFormula>AND(
 ISNEW(),
 TEXT(StageName) &lt;&gt; &apos;New&apos;
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Opportunity can only be created in New Stage</errorMessage>
</ValidationRule>