force-app/main/default/objects/Opportunity/validationRules/Restrict_To_Agency_Completed_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_To_Agency_Completed_Status</fullName>
    <active>true</active>
    <description>Opportunity should be restricted from marking as Sold until the Agency is marked as Completed</description>
    <errorConditionFormula>AND(
ISCHANGED( StageName ),
 Assisted_by_Agent__c = true,
TEXT(StageName) = &apos;Sold&apos;,
TEXT(Agency__r.Status__c) &lt;&gt; &apos;Completed&apos;
)</errorConditionFormula>
    <errorMessage>Agency registration should be Completed before closing the deal</errorMessage>
</ValidationRule>