force-app/main/default/objects/Opportunity/validationRules/Stage_Restriction_From_Cancelled_To_Prev.validationRule-meta.xml
<ValidationRule>
    <fullName>Stage_Restriction_From_Cancelled_To_Prev</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISCHANGED(StageName),
 $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
 OR(
  ISPICKVAL(StageName, &quot;New&quot;),
  ISPICKVAL(StageName, &quot;Booked&quot;),
  ISPICKVAL(StageName, &quot;Reserved&quot;),
  ISPICKVAL(StageName, &quot;Sold&quot;)
 ),
 ISPICKVAL(PRIORVALUE(StageName), &quot;Cancelled&quot;)
)</errorConditionFormula>
    <errorMessage>You cannot go back to Previous Stage</errorMessage>
</ValidationRule>